solved 5 questions for 06

--- a/problems/06.ipynb
+++ b/problems/06.ipynb
@@ -389,8 +389,350 @@
    "execution_count": null,
    "id": "8533cc29",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from typing import Optional\n",
+    "\n",
+    "class TreeNode:\n",
+    "    def __init__(self, val=0, left=None, right=None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right\n",
+    "class Solution:\n",
+    "    def isSameTree(self, p: Optional[TreeNode], q: Optional[TreeNode]) -> bool:\n",
+    "        if not q and not p : \n",
+    "            return True  \n",
+    "        if not p or not q or p.val != q.val:\n",
+    "            return False\n",
+    "        \n",
+    "        return (self.isSameTree(p.left, q.left) and \n",
+    "                self.isSameTree(p.right, q.right))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a38eb4a8",
+   "metadata": {},
+   "source": [
+    "### 6: [**Maximum Depth of Binary Tree**](https://leetcode.com/problems/maximum-depth-of-binary-tree/)\n",
+    "\n",
+    "Given the `root` of a binary tree, return *its maximum depth*.\n",
+    "\n",
+    "A binary tree's **maximum depth** is the number of nodes along the longest path from the root node down to the farthest leaf node.\n",
+    "\n",
+    " \n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "```\n",
+    "Input: root = [3,9,20,null,null,15,7]\n",
+    "Output: 3\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "```\n",
+    "Input: root = [1,null,2]\n",
+    "Output: 2\n",
+    "```\n",
+    "\n",
+    " \n",
+    "\n",
+    "**Constraints:**\n",
+    "\n",
+    "- The number of nodes in the tree is in the range `[0, 104]`.\n",
+    "- `-100 <= Node.val <= 100`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e608ca90",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from typing import Optional\n",
+    "\n",
+    "class TreeNode:\n",
+    "    def __init__(self, val=0, left=None, right=None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right\n",
+    "class Solution:\n",
+    "    def slow_maxDepth(self, root: Optional[TreeNode]) -> int:\n",
+    "\n",
+    "        def helper(node, depth):\n",
+    "            if not node:\n",
+    "                return depth\n",
+    "            return max(helper(node.left, depth + 1), helper(node.right, depth + 1))\n",
+    "\n",
+    "        return helper(root,0)\n",
+    "    # faster \n",
+    "    def maxDepth(self, root: Optional[TreeNode]) -> int:\n",
+    "        if (root == None):\n",
+    "            return 0\n",
+    "        else:\n",
+    "            ldepth=self.maxDepth(root.left)\n",
+    "            rdepth=self.maxDepth(root.right)\n",
+    "            \n",
+    "            if (ldepth > rdepth):\n",
+    "                return (1+ldepth)\n",
+    "            else:\n",
+    "                return (1+rdepth)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e69240a9",
+   "metadata": {},
+   "source": [
+    "### 7: [**Valid Palindrome**](https://leetcode.com/problems/valid-palindrome/)\n",
+    "\n",
+    "A phrase is a **palindrome** if, after converting all uppercase letters into lowercase letters and removing all non-alphanumeric characters, it reads the same forward and backward. Alphanumeric characters include letters and numbers.\n",
+    "\n",
+    "Given a string `s`, return `true` *if it is a **palindrome**, or* `false` *otherwise*. \n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "```\n",
+    "Input: s = \"A man, a plan, a canal: Panama\"\n",
+    "Output: true\n",
+    "Explanation: \"amanaplanacanalpanama\" is a palindrome.\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "```\n",
+    "Input: s = \"race a car\"\n",
+    "Output: false\n",
+    "Explanation: \"raceacar\" is not a palindrome.\n",
+    "```\n",
+    "\n",
+    "**Example 3:**\n",
+    "\n",
+    "```\n",
+    "Input: s = \" \"\n",
+    "Output: true\n",
+    "Explanation: s is an empty string \"\" after removing non-alphanumeric characters.\n",
+    "Since an empty string reads the same forward and backward, it is a palindrome.\n",
+    "```\n",
+    "\n",
+    " \n",
+    "\n",
+    "**Constraints:**\n",
+    "\n",
+    "- `1 <= s.length <= 2 * 105`\n",
+    "- `s` consists only of printable ASCII characters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff1da516",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "class Solution:\n",
+    "    def isPalindrome(self, s: str) -> bool:\n",
+    "        cleaned = re.sub(r'[^a-zA-Z0-9]', '', s)\n",
+    "        cleaned_lower= cleaned.lower()\n",
+    "        \n",
+    "        return cleaned_lower == cleaned_lower[::-1]\n",
+    "    \n",
+    "    # alternative \n",
+    "    # cleaned_string = ''.join([char for char in s.lower() if char.isalnum()])\n",
+    "    # return cleaned_string == cleaned_string[::-1]\n",
+    "\n",
+    "\n",
+    "sol = Solution()\n",
+    "sol.isPalindrome(\"A man, a plan, a canal: Panama\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf9b74d3",
+   "metadata": {},
+   "source": [
+    "### **8:[ Linked List Cycle](https://leetcode.com/problems/linked-list-cycle/)**\n",
+    "\n",
+    "Given `head`, the head of a linked list, determine if the linked list has a cycle in it.\n",
+    "\n",
+    "There is a cycle in a linked list if there is some node in the list that can be reached again by continuously following the `next` pointer. Internally, `pos` is used to denote the index of the node that tail's `next` pointer is connected to. **Note that** `pos` **is not passed as a parameter**.\n",
+    "\n",
+    "Return `true` *if there is a cycle in the linked list*. Otherwise, return `false`. \n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "```\n",
+    "Input: head = [3,2,0,-4], pos = 1\n",
+    "Output: true\n",
+    "Explanation: There is a cycle in the linked list, where the tail connects to the 1st node (0-indexed).\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "```\n",
+    "Input: head = [1,2], pos = 0\n",
+    "Output: true\n",
+    "Explanation: There is a cycle in the linked list, where the tail connects to the 0th node.\n",
+    "```\n",
+    "\n",
+    "**Example 3:**\n",
+    "\n",
+    "```\n",
+    "Input: head = [1], pos = -1\n",
+    "Output: false\n",
+    "Explanation: There is no cycle in the linked list.\n",
+    " \n",
+    "```\n",
+    "\n",
+    "**Constraints:**\n",
+    "\n",
+    "- The number of the nodes in the list is in the range `[0, 104]`.\n",
+    "- `-105 <= Node.val <= 105`\n",
+    "- `pos` is `-1` or a **valid index** in the linked-list.\n",
+    "\n",
+    " \n",
+    "\n",
+    "**Follow up:** Can you solve it using `O(1)` (i.e. constant) memory?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a595fdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Optional\n",
+    "class ListNode:\n",
+    "    def __init__(self, x):\n",
+    "        self.val = x\n",
+    "        self.next = None\n",
+    "\n",
+    "class Solution:\n",
+    "    def hasCycle(self, head: Optional[ListNode]) -> bool:\n",
+    "        seen =set()\n",
+    "        while head :\n",
+    "            if head in seen :\n",
+    "                return True\n",
+    "            seen.add(head)\n",
+    "            head =  head.next\n",
+    "        \n",
+    "        return False\n",
+    "    \n",
+    "        # alternative and faster approach\n",
+    "        # visited = set()\n",
+    "        # def traverse(node):\n",
+    "        #     if not node:\n",
+    "        #         return False\n",
+    "        #     if node in visited:\n",
+    "        #         return True\n",
+    "        #     visited.add(node)\n",
+    "        #     return traverse(node.next)\n",
+    "\n",
+    "        # return traverse(head)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb70656d",
+   "metadata": {},
+   "source": [
+    "### 9: [**Reverse Bits**](https://leetcode.com/problems/reverse-bits/)\n",
+    "\n",
+    "Reverse bits of a given 32 bits unsigned integer.\n",
+    "\n",
+    "**Note:**\n",
+    "\n",
+    "- Note that in some languages, such as Java, there is no unsigned integer type. In this case, both input and output will be given as a signed integer type. They should not affect your implementation, as the integer's internal binary representation is the same, whether it is signed or unsigned.\n",
+    "- In Java, the compiler represents the signed integers using [2's complement notation](https://en.wikipedia.org/wiki/Two%27s_complement). Therefore, in **Example 2** below, the input represents the signed integer `-3` and the output represents the signed integer `-1073741825`.\n",
+    "\n",
+    " \n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "**Input:** n = 43261596\n",
+    "\n",
+    "**Output:** 964176192\n",
+    "\n",
+    "**Explanation:**\n",
+    "\n",
+    "**IntegerBinary**432615960000001010010100000111101001110096417619200111001011110000010100101000000\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "**Input:** n = 2147483644\n",
+    "\n",
+    "**Output:** 1073741822\n",
+    "\n",
+    "**Explanation:**\n",
+    "\n",
+    "**IntegerBinary**214748364401111111111111111111111111111100107374182200111111111111111111111111111110\n",
+    "\n",
+    " \n",
+    "\n",
+    "**Constraints:**\n",
+    "\n",
+    "- `0 <= n <= 231 - 2`\n",
+    "- `n` is even.\n",
+    "\n",
+    " \n",
+    "\n",
+    "**Follow up:** If this function is called many times, how would you optimize it?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02a8ec1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "111001011110000010100101"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def reverseBits(self, n: int) -> int:\n",
+    "        binary = bin(n)[2:].zfill(32) \n",
+    "        reversed_binary = binary[::-1]  \n",
+    "        return int(reversed_binary, 2) \n",
+    "        # alternative and faster\n",
+    "        # return int(format(n, '032b')[::-1], 2)\n",
+    "   "
+   ]
   }
  ],
  "metadata": {
