--- a/problems/04.ipynb
+++ b/problems/04.ipynb
@@ -561,26 +561,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 4\n",
-      "1 4\n",
-      "2 4\n",
-      "2 3\n",
       "5\n",
-      "0 5\n",
-      "1 5\n",
-      "2 5\n",
-      "2 4\n",
-      "2 3\n",
       "8\n",
-      "0 3\n",
-      "1 3\n",
-      "2 3\n",
       "-1\n"
      ]
     }
    ],
    "source": [
-    "def stock_picker(prices: list)->int :\n",
+    "# does not work for all the possible options\n",
+    "def stock_picker1(prices: list)->int :\n",
     "    left, right =0, len(prices)-1\n",
     "    max = prices[right]- prices[left]\n",
     "    for i in range(len(prices)-1) :\n",
@@ -598,7 +587,7 @@
     "        return -1 \n",
     "    return max \n",
     "\n",
-    "#alternative \n",
+    "#it works \n",
     "def stock_picker(prices: list) -> int:\n",
     "    if not prices:\n",
     "        return -1\n",
@@ -620,6 +609,14 @@
     "print(stock_picker([14, 20, 4, 12, 5, 11]))\n",
     "print(stock_picker([80, 60, 10, 8]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4bc3b07",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
