--- a/problems/06.ipynb
+++ b/problems/06.ipynb
@@ -733,11 +733,137 @@
     "        # return int(format(n, '032b')[::-1], 2)\n",
     "   "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6262509c",
+   "metadata": {},
+   "source": [
+    "### [**9: Number of 1 Bits**](https://leetcode.com/problems/number-of-1-bits/)\n",
+    "\n",
+    "Given a positive integer `n`, write a function that returns the number of set bits in its binary representation (also known as the [Hamming weight](http://en.wikipedia.org/wiki/Hamming_weight)).\n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "**Input:** n = 11\n",
+    "\n",
+    "**Output:** 3\n",
+    "\n",
+    "**Explanation:**\n",
+    "\n",
+    "The input binary string **1011** has a total of three set bits.\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "**Input:** n = 128\n",
+    "\n",
+    "**Output:** 1\n",
+    "\n",
+    "**Explanation:**\n",
+    "\n",
+    "The input binary string **10000000** has a total of one set bit.\n",
+    "\n",
+    "**Example 3:**\n",
+    "\n",
+    "**Input:** n = 2147483645\n",
+    "\n",
+    "**Output:** 30\n",
+    "\n",
+    "**Explanation:**\n",
+    "\n",
+    "The input binary string **1111111111111111111111111111101** has a total of thirty set bits.\n",
+    "\n",
+    "**Constraints:**\n",
+    "\n",
+    "- `1 <= n <= 231 - 1` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4a86f54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def hammingWeight(self, n: int) -> int:\n",
+    "        binary = bin(n)[2:]\n",
+    "        count=0 \n",
+    "        for i in range(len(binary)) : \n",
+    "            if binary[i] == \"1\" :\n",
+    "                count +=1 \n",
+    "\n",
+    "        return count\n",
+    "    \n",
+    "        #alternative\n",
+    "        # return bin(n).count(\"1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fce94b16",
+   "metadata": {},
+   "source": [
+    "### **10:[ Contains Duplicate](https://leetcode.com/problems/contains-duplicate/)**\n",
+    "\n",
+    "Given an integer array `nums`, return `true` if any value appears **at least twice** in the array, and return `false` if every element is distinct.\n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "**Input:** nums = \\[1,2,3,1\\]\n",
+    "\n",
+    "**Output:** true\n",
+    "\n",
+    "**Explanation:**\n",
+    "\n",
+    "The element 1 occurs at the indices 0 and 3.\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "**Input:** nums = \\[1,2,3,4\\]\n",
+    "\n",
+    "**Output:** false\n",
+    "\n",
+    "**Explanation:**\n",
+    "\n",
+    "All elements are distinct.\n",
+    "\n",
+    "**Example 3:**\n",
+    "\n",
+    "**Input:** nums = \\[1,1,1,3,3,4,3,2,4,2\\]\n",
+    "\n",
+    "**Output:** true\n",
+    "\n",
+    "**Constraints:**\n",
+    "\n",
+    "- `1 <= nums.length <= 105`\n",
+    "- `-109 <= nums[i] <= 109` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "192ee99a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def containsDuplicate(self, nums: List[int]) -> bool:\n",
+    "        seen = {}\n",
+    "        for num in nums : \n",
+    "            if num in seen :\n",
+    "                return True \n",
+    "            seen[num] = 1 \n",
+    "        return False"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "env (3.13.5)",
    "language": "python",
    "name": "python3"
   },
